Removing apparently vestigal code for IE6, fixes #11859 !strict.   Note though that the test_Tooltip_placement.html test file has changed so the steps specified in the ticket no longer apply; the browser window needs to be wider to leave space for the tooltip to appear without overlapping.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@23066 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/Dialog.css
+++ b/themes/claro/Dialog.css
@@ -183,9 +183,6 @@
 .claro .dijitTooltipLeft {
 	padding-right: 14px;
 }
-.dj_ie6 .claro .dijitTooltipLeft {
-	padding-left: 15px;
-}
 .claro .dijitTooltipLeft .dijitTooltipConnector {
 	/* the arrow piece for tooltips to the left of an element, bottom borders aligned */
 	right: 0px;
